fixed sm-lg nav-bar spacing

--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -28,6 +28,7 @@ nav {
     background-color: #F0F0F0;
     height: 60px;
     margin-top: 3em;
+
 }
 .content {
     padding-top: 2em;
@@ -133,4 +134,10 @@ h3 {
     height: 24px;
     width: 24px;
     border: none;
+}
+.left-nav-list {
+    background-color: var(--silver-surfer);
+}
+.right-nav-list {
+    background-color: var(--silver-surfer);
 }
